--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <!--
 * CoreUI Free React.js Admin Template
 * @version v5.1.0
@@ -7,20 +7,18 @@
 * Licensed under MIT (https://github.com/coreui/coreui-free-react-admin-template/blob/main/LICENSE)
 -->
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Freight Core1</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/favicon.ico">
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app
-    </noscript>
-    <div id="root"></div>
-    <script type="module" src="/src/index.js"></script>
-    <!-- built files will be auto injected -->
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <title>Freight Core1</title>
+        <link rel="manifest" href="/manifest.json" />
+        <link rel="shortcut icon" href="/favicon.ico" />
+    </head>
+    <body>
+        <noscript> You need to enable JavaScript to run this app </noscript>
+        <div id="root"></div>
+        <script type="module" src="/src/index.js"></script>
+        <!-- built files will be auto injected -->
+    </body>
 </html>
