--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,11 @@
-<!doctype html>
-<!--
-* CoreUI Free React.js Admin Template
-* @version v5.1.0
-* @link https://coreui.io/product/free-react-admin-template/
-* Copyright (c) 2024 creativeLabs Łukasz Holeczek
-* Licensed under MIT (https://github.com/coreui/coreui-free-react-admin-template/blob/main/LICENSE)
--->
+<!DOCTYPE html>
+
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>Freight Core1</title>
+        <title>Freight Core 1</title>
         <link rel="manifest" href="/manifest.json" />
         <link rel="shortcut icon" href="/favicon.ico" />
     </head>
@@ -19,6 +13,5 @@
         <noscript> You need to enable JavaScript to run this app </noscript>
         <div id="root"></div>
         <script type="module" src="/src/index.js"></script>
-        <!-- built files will be auto injected -->
     </body>
 </html>
