--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,58 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>Freight Core 1</title>
+        <meta name="robots" content="index, follow">
+        <title>Axleshift Core 1</title>
         <link rel="manifest" href="/manifest.json" />
         <link rel="shortcut icon" href="/favicon.ico" />
+        <link rel="apple-touch-icon" href="/favicon.ico">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="Axelshift Core 1" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="hostname" content="core1.axleshift.com">
+        <meta name="google-site-verification" content="h5iYzE_wKfzBF13wGtJkYOsbKlIBikLLI6SjCtTyJ58"/>
+        <script
+        type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@graph": [{
+                "@type": "WebPage",
+                "@id": "https://core1.axleshift.com",
+                "url": "https://core1.axleshift.com/",
+                "name": "Axleshift Core 1",
+                "isPartOf": {
+                    "@id": "https://core1.axleshift.com/#website"
+                },
+                "datePublished": "2024-010-07T23:54:30+00:00",
+                "dateModified": "2024-010-07T23:54:30+00:00",
+                "breadcrumb": {
+                    "@id": "https://core1.axleshift.com/#breadcrumb"
+                },
+                "inLanguage": "en-US",
+                "potentialAction": [{
+                    "@type": "ReadAction",
+                    "target": ["https://core1.axleshift.com/"]
+                }]
+            }, {
+                "@type": "BreadcrumbList",
+                "@id": "https://core1.axleshift.com/#breadcrumb",
+                "itemListElement": [{
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Overview"
+                }]
+            }, {
+                "@type": "WebSite",
+                "@id": "https://core1.axleshift.com/#website",
+                "url": "https://core1.axleshift.com/",
+                "name": "Axleshift Core 1",
+                "description": "",
+                "inLanguage": "en-US"
+            }]
+        }
+    </script>
     </head>
     <body>
         <noscript> You need to enable JavaScript to run this app </noscript>
