--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,9 @@
             }]
         }
     </script>
+    <script>
+        window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {}
+    </script>
     </head>
     <body>
         <noscript> You need to enable JavaScript to run this app </noscript>
