--- a/client/index.html
+++ b/client/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="robots" content="index, follow">
-        <title>Axleshift Core 1</title>
-        <link rel="manifest" href="/manifest.json" />
-        <link rel="shortcut icon" href="/favicon.ico" />
-        <link rel="apple-touch-icon" href="/favicon.ico">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
-        <meta property="og:locale" content="en_US" />
-        <meta property="og:type" content="website" />
-        <meta property="og:site_name" content="Axelshift Core 1" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="hostname" content="core1.axleshift.com">
-        <meta name="google-site-verification" content="h5iYzE_wKfzBF13wGtJkYOsbKlIBikLLI6SjCtTyJ58"/>
-        <script
-        type="application/ld+json">
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="robots" content="index, follow">
+    <title>Axleshift Core 1 - Freight Management</title>
+    <meta name="author" content="The Freight Capstone Core 1 https://github.com/freight-capstone/core1">
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="sitemap" type="application/xml" title="Axleshift Core 1 » Sitemap" href="https://core1.axleshift.com/sitemap.xml">
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Axleshift Core 1 - Freight Management" />
+    <meta property="og:title" content="Axleshift Core 1 - Freight Management" />
+    <meta property="og:description"
+        content="Our cutting-edge platform empowers businesses to improve their shipping strategies. Experience optimized routing without the complexities of tracking." />
+    <meta property="og:url" content="https://core1.axleshift.com" />
+    <meta property="og:image" content="https://core1.axleshift.com/images/freight-air.jpg" />
+    <meta property="og:image:alt" content="Axleshift Core 1 - Freight Management" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Axleshift Core 1 - Freight Management" />
+    <meta name="twitter:description"
+        content="Our cutting-edge platform empowers businesses to improve their shipping strategies. Experience optimized routing without the complexities of tracking." />
+    <meta name="twitter:url" content="https://core1.axleshift.com" />
+    <meta name="twitter:image" content="https://core1.axleshift.com/images/freight-sea.jpg" />
+    <meta name="twitter:image:alt" content="Axleshift Core 1 - Freight Management" />
+    <meta name="hostname" content="core1.axleshift.com">
+    <meta name="google-site-verification" content="h5iYzE_wKfzBF13wGtJkYOsbKlIBikLLI6SjCtTyJ58" />
+    <script type="application/ld+json">
         {
             "@context": "https://schema.org",
             "@graph": [{
                 "@type": "WebPage",
                 "@id": "https://core1.axleshift.com",
                 "url": "https://core1.axleshift.com/",
-                "name": "Axleshift Core 1",
+                "name": "Axleshift Core 1 - Freight Management",
                 "isPartOf": {
                     "@id": "https://core1.axleshift.com/#website"
                 },
@@ -58,12 +72,14 @@
         }
     </script>
     <script>
-        window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {}
+        window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () { }
     </script>
-    </head>
-    <body>
-        <noscript> You need to enable JavaScript to run this app </noscript>
-        <div id="root"></div>
-        <script type="module" src="/src/index.js"></script>
-    </body>
+</head>
+
+<body>
+    <noscript> You need to enable JavaScript to run this app </noscript>
+    <div id="root"></div>
+    <script type="module" src="/src/index.js"></script>
+</body>
+
 </html>
