added dashboard server monitoring, api generation, bug fixes and improvements

--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,9 @@
     <meta name="twitter:image:alt" content="Axleshift Core 1 - Freight Management" />
     <meta name="hostname" content="core1.axleshift.com">
     <meta name="google-site-verification" content="h5iYzE_wKfzBF13wGtJkYOsbKlIBikLLI6SjCtTyJ58" />
+    <script>
+        window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {}
+    </script>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
