refractor overview to dashboard, bug fixes and improvements

--- a/client/index.html
+++ b/client/index.html
@@ -65,7 +65,7 @@
                 "itemListElement": [{
                     "@type": "ListItem",
                     "position": 1,
-                    "name": "Overview"
+                    "name": "Dashboard"
                 }]
             }, {
                 "@type": "WebSite",
