--- a/client/index.html
+++ b/client/index.html
@@ -80,8 +80,7 @@
 </head>
 
 <body>
-    <noscript> You need to enable JavaScript to run this app </noscript>
-    <div id="root"></div>
+    <noscript> It's 21st century you need to enable JavaScript! </noscript>
     <script type="module" src="/src/index.js"></script>
 </body>
 
