change the generation of tokens and sessiont to random bytes and change the password hashes

--- a/client/index.html
+++ b/client/index.html
@@ -39,43 +39,7 @@
         window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {}
     </script>
     <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@graph": [{
-                "@type": "WebPage",
-                "@id": "https://core1.axleshift.com",
-                "url": "https://core1.axleshift.com/",
-                "name": "Axleshift Core 1 - Freight Management",
-                "isPartOf": {
-                    "@id": "https://core1.axleshift.com/#website"
-                },
-                "datePublished": "2024-010-07T23:54:30+00:00",
-                "dateModified": "2024-010-07T23:54:30+00:00",
-                "breadcrumb": {
-                    "@id": "https://core1.axleshift.com/#breadcrumb"
-                },
-                "inLanguage": "en-US",
-                "potentialAction": [{
-                    "@type": "ReadAction",
-                    "target": ["https://core1.axleshift.com/"]
-                }]
-            }, {
-                "@type": "BreadcrumbList",
-                "@id": "https://core1.axleshift.com/#breadcrumb",
-                "itemListElement": [{
-                    "@type": "ListItem",
-                    "position": 1,
-                    "name": "Dashboard"
-                }]
-            }, {
-                "@type": "WebSite",
-                "@id": "https://core1.axleshift.com/#website",
-                "url": "https://core1.axleshift.com/",
-                "name": "Axleshift Core 1",
-                "description": "",
-                "inLanguage": "en-US"
-            }]
-        }
+        {"@context":"https://schema.org","@graph":[{"@type":"WebPage","@id":"https://core1.axleshift.com","url":"https://core1.axleshift.com/","name":"Axleshift Core 1 - Freight Management","isPartOf":{"@id":"https://core1.axleshift.com/#website"},"datePublished":"2024-010-07T23:54:30+00:00","dateModified":"2024-010-07T23:54:30+00:00","breadcrumb":{"@id":"https://core1.axleshift.com/#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://core1.axleshift.com/"]}]},{"@type":"BreadcrumbList","@id":"https://core1.axleshift.com/#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Dashboard"}]},{"@type":"WebSite","@id":"https://core1.axleshift.com/#website","url":"https://core1.axleshift.com/","name":"Axleshift Core 1","description":"","inLanguage":"en-US"}]}
     </script>
 </head>
 
