layout bug fixes

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="robots" content="index, follow">
-    <title>Axleshift Core 1 - Freight Management</title>
+    <title>Axleshift Core 1</title>
     <meta name="author" content="The Freight Capstone Core 1 https://github.com/freight-capstone/core1">
     <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="/favicon.ico" />
@@ -16,20 +16,20 @@
     <link rel="sitemap" type="application/xml" title="Axleshift Core 1 » Sitemap" href="https://core1.axleshift.com/sitemap.xml">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Axleshift Core 1 - Freight Management" />
-    <meta property="og:title" content="Axleshift Core 1 - Freight Management" />
+    <meta property="og:site_name" content="Axleshift Core 1" />
+    <meta property="og:title" content="Axleshift Core 1" />
     <meta property="og:description"
         content="Our cutting-edge platform empowers businesses to improve their shipping strategies. Experience optimized routing without the complexities of tracking." />
     <meta property="og:url" content="https://core1.axleshift.com" />
-    <meta property="og:image" content="https://core1.axleshift.com/images/freight-air.jpg" />
-    <meta property="og:image:alt" content="Axleshift Core 1 - Freight Management" />
+    <meta property="og:image" content="https://core1.axleshift.com/images/background.png" />
+    <meta property="og:image:alt" content="Axleshift Core 1" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Axleshift Core 1 - Freight Management" />
+    <meta name="twitter:title" content="Axleshift Core 1" />
     <meta name="twitter:description"
         content="Our cutting-edge platform empowers businesses to improve their shipping strategies. Experience optimized routing without the complexities of tracking." />
     <meta name="twitter:url" content="https://core1.axleshift.com" />
-    <meta name="twitter:image" content="https://core1.axleshift.com/images/freight-sea.jpg" />
-    <meta name="twitter:image:alt" content="Axleshift Core 1 - Freight Management" />
+    <meta name="twitter:image" content="https://core1.axleshift.com/images/background.png" />
+    <meta name="twitter:image:alt" content="Axleshift Core 1" />
     <meta name="hostname" content="core1.axleshift.com">
     <meta name="google-site-verification" content="h5iYzE_wKfzBF13wGtJkYOsbKlIBikLLI6SjCtTyJ58" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
         window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {}
     </script>
     <script type="application/ld+json">
-        {"@context":"https://schema.org","@graph":[{"@type":"WebPage","@id":"https://core1.axleshift.com","url":"https://core1.axleshift.com/","name":"Axleshift Core 1 - Freight Management","isPartOf":{"@id":"https://core1.axleshift.com/#website"},"datePublished":"2024-010-07T23:54:30+00:00","dateModified":"2024-010-07T23:54:30+00:00","breadcrumb":{"@id":"https://core1.axleshift.com/#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://core1.axleshift.com/"]}]},{"@type":"BreadcrumbList","@id":"https://core1.axleshift.com/#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Dashboard"}]},{"@type":"WebSite","@id":"https://core1.axleshift.com/#website","url":"https://core1.axleshift.com/","name":"Axleshift Core 1","description":"","inLanguage":"en-US"}]}
+        {"@context":"https://schema.org","@graph":[{"@type":"WebPage","@id":"https://core1.axleshift.com","url":"https://core1.axleshift.com/","name":"Axleshift Core 1","isPartOf":{"@id":"https://core1.axleshift.com/#website"},"datePublished":"2024-010-07T23:54:30+00:00","dateModified":"2024-010-07T23:54:30+00:00","breadcrumb":{"@id":"https://core1.axleshift.com/#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://core1.axleshift.com/"]}]},{"@type":"BreadcrumbList","@id":"https://core1.axleshift.com/#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Dashboard"}]},{"@type":"WebSite","@id":"https://core1.axleshift.com/#website","url":"https://core1.axleshift.com/","name":"Axleshift Core 1","description":"","inLanguage":"en-US"}]}
     </script>
 </head>
 
