--- a/client/index.html
+++ b/client/index.html
@@ -7,36 +7,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="robots" content="index, follow">
-    <title>Axleshift Core 1</title>
+    <title>Axleshift</title>
     <meta name="author" content="The Freight Capstone Core 1 https://github.com/freight-capstone/core1">
     <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.ico">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="sitemap" type="application/xml" title="Axleshift Core 1 » Sitemap" href="https://core1.axleshift.com/sitemap.xml">
+    <link rel="sitemap" type="application/xml" title="Axleshift » Sitemap" href="https://core1.axleshift.com/sitemap.xml">
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Axleshift Core 1" />
-    <meta property="og:title" content="Axleshift Core 1" />
+    <meta property="og:site_name" content="Axleshift" />
+    <meta property="og:title" content="Axleshift" />
     <meta property="og:description"
         content="Our cutting-edge platform empowers businesses to improve their shipping strategies. Experience optimized routing without the complexities of tracking." />
     <meta property="og:url" content="https://core1.axleshift.com" />
     <meta property="og:image" content="https://core1.axleshift.com/images/background.png" />
-    <meta property="og:image:alt" content="Axleshift Core 1" />
+    <meta property="og:image:alt" content="Axleshift" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Axleshift Core 1" />
+    <meta name="twitter:title" content="Axleshift" />
     <meta name="twitter:description"
         content="Our cutting-edge platform empowers businesses to improve their shipping strategies. Experience optimized routing without the complexities of tracking." />
     <meta name="twitter:url" content="https://core1.axleshift.com" />
     <meta name="twitter:image" content="https://core1.axleshift.com/images/background.png" />
-    <meta name="twitter:image:alt" content="Axleshift Core 1" />
+    <meta name="twitter:image:alt" content="Axleshift" />
     <meta name="hostname" content="core1.axleshift.com">
     <meta name="google-site-verification" content="h5iYzE_wKfzBF13wGtJkYOsbKlIBikLLI6SjCtTyJ58" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script type="application/ld+json">
-        {"@context":"https://schema.org","@graph":[{"@type":"WebPage","@id":"https://core1.axleshift.com","url":"https://core1.axleshift.com/","name":"Axleshift Core 1","isPartOf":{"@id":"https://core1.axleshift.com/#website"},"datePublished":"2024-010-07T23:54:30+00:00","dateModified":"2024-010-07T23:54:30+00:00","breadcrumb":{"@id":"https://core1.axleshift.com/#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://core1.axleshift.com/"]}]},{"@type":"BreadcrumbList","@id":"https://core1.axleshift.com/#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Dashboard"}]},{"@type":"WebSite","@id":"https://core1.axleshift.com/#website","url":"https://core1.axleshift.com/","name":"Axleshift Core 1","description":"","inLanguage":"en-US"}]}
+        {"@context":"https://schema.org","@graph":[{"@type":"WebPage","@id":"https://core1.axleshift.com","url":"https://core1.axleshift.com/","name":"Axleshift","isPartOf":{"@id":"https://core1.axleshift.com/#website"},"datePublished":"2024-010-07T23:54:30+00:00","dateModified":"2024-010-07T23:54:30+00:00","breadcrumb":{"@id":"https://core1.axleshift.com/#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://core1.axleshift.com/"]}]},{"@type":"BreadcrumbList","@id":"https://core1.axleshift.com/#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Dashboard"}]},{"@type":"WebSite","@id":"https://core1.axleshift.com/#website","url":"https://core1.axleshift.com/","name":"Axleshift","description":"","inLanguage":"en-US"}]}
     </script>
 </head>
 
