--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="sitemap" type="application/xml" title="Axleshift » Sitemap"
         href="https://core1.axleshift.com/sitemap.xml">
-    <meta property="description"
+    <meta name="description"
             content="Connecting everyone with smarter, faster, and more secure shipping. From first mile to last, we move your world forward." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
